--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "jest": "^29.5.0"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "supertest": "^6.3.3"
   }
 }
